# SunoSongsCreator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: config.py  main.py
api/db/: __init__.py  mongodb.py
api/models/: __init__.py  account.py  task.py
api/routers/: __init__.py  account.py  health.py  task.py
api/services/: __init__.py  pool_manager.py  scheduler.py  song_service.py
examples/: README.md  custom_mode.py  simple_mode.py  test_api.py  unified_mode.py
suno/: __init__.py  suno.py
