[project]
name = "sunosongscreator"
version = "0.1.0"
description = "High-quality songs generation by suno.ai. Reverse engineered API + FastAPI service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.6.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["suno"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["I", "F", "E", "W", "N", "UP", "B", "C4", "DTZ", "T10", "ISC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
